<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">

    <ImageView
        android:layout_width="195dp"
        android:layout_height="212dp"
        android:layout_gravity="center"
        android:src="@drawable/cropped">

    </ImageView>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="50px"
        style="@style/TextColor"
        android:text="@string/username">
    </TextView>

    <EditText
        android:id="@+id/signUpUsername"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textEmailAddress"
        android:background="@color/accentColorLight">
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="50px"
        style="@style/TextColor"
        android:text="@string/name">
    </TextView>

    <EditText
        android:id="@+id/signUpName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textEmailAddress"
        android:background="@color/accentColorLight">
    </EditText>

    <TableLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:stretchColumns="1" >
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="50px"
                style="@style/TextColor"
                android:orientation="horizontal">
            </TextView>

            <TextView
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:textSize="50px"
                style="@style/TextColor"
                android:text="@string/pass_specs">
            </TextView>
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/signUpPass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/accentColorLight"
        android:inputType="textPassword">
    </EditText>

    <CheckBox
        android:id="@+id/confirm"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextColor"
        android:textSize="50px"
        android:text="@string/tnc">
    </CheckBox>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_marginTop="30dp"
        android:background="@drawable/border_on_buttons"
        android:textSize="50px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup">
    </Button>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="50px"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                style="@style/TextColor"
                android:text="@string/ask_to_login1">
            </TextView>

            <TextView
                android:id="@+id/logInHere"
                android:textSize="50px"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:textColor="@color/textColor"
                android:text="@string/ask_to_login2">
            </TextView>
        </TableRow>

    </TableLayout>

</LinearLayout>